# track-list-extractor

./: .gitignore  Dockerfile  Pipfile  README.md  bootstrap.sh  entrypoint.sh  gunicorn_logging.conf  main.py  main_test.py  pyproject.toml  requirements.txt  run.py  serverless.yml  service-definition.json  task-definition.json
.github/workflows/: auto-update.yml  check.yml  demo-test.yml  python-tests.yml  tracklist1001-test.yml
src/: __init__.py  app.py  config.py  exceptions.py  log.py  tracklist.py  tracklist1001.py
src/api/: errors_handler.py
src/api/v1/: __init__.py  tracklist.py
src/domain/: session.py  track.py
src/services/: extractor.py  webdriver.py
tests/: conftest.py
tests/e2e/: config_test.py  faker.py  tracklist1001_test.py  tracklist_test.py
tests/e2e/api/: tracklist_test.py
tests/e2e/api/v1/: tracklist_test.py
tests/unit/: track_test.py
